# Leybach-Straub--Abgabe-C-Programm

./: .gitignore  CMakeLists.txt  run_cmake.sh
dat/: bud-and-terence.txt  bud-spencer.txt  terence-hill.txt
include/: choice.h  developer.h  developer_group.h  developer_library.h  output_functions.h  pointer_utils.h
src/: choice.c  developer.c  developer_group.c  main.c  output_functions.c  pointer_utils.c
